# ROS2_Humble_TB3_CleanRoom

./: README.md  terminal instr
clean_room/: package.xml  setup.cfg  setup.py
clean_room/clean_room/: clean_room_client.py  clean_room_server.py  planner_node.py
clean_room/clean_room/planner/: cleaning_manager.py
clean_room/clean_room/planner/planning/: room_cleaning_path_planner.py
clean_room/clean_room/planner/visualizing/: rviz_markers.py  visualize.py
clean_room/clean_room/planner_core/mapping/: map_processor.py  map_toolbox.pgm  map_toolbox.yaml  waypoint_mesher.py
clean_room/clean_room/planner_core/planning/: room_cleaning_path_planner.py
clean_room/clean_room/planner_core/visualizing/: rviz_markers.py
clean_room/clean_room/utils/: geometry_utils.py
clean_room/config/: rooms.yaml
clean_room/launch/: clean_room.launch.py  turtlebot3_cleaning_sim.launch.py
clean_room/maps/: house_map.yaml  map_v1.pgm
clean_room/rviz/: cleaning_view.rviz
clean_room_bringup/: package.xml  setup.cfg  setup.py
clean_room_bringup/launch/: clean_room_eval.launch.py  clean_room_sim.launch.py
clean_room_client/: package.xml  setup.cfg  setup.py
clean_room_client/clean_room_client/: clean_room_client.py
clean_room_client/launch/: clean_room_client.launch.py
clean_room_interfaces/: CMakeLists.txt  package.xml
clean_room_interfaces/action/: CleanRoom.action
clean_room_operations/: package.xml  setup.cfg  setup.py
clean_room_operations/clean_room_operations/: manager.py
clean_room_operations/clean_room_operations/planner_core/planning/: room_cleaning_path_planner.py  tsp_solver_greedy.py
clean_room_operations/clean_room_operations/planner_core/visualizing/: visualize.py
clean_room_operations/clean_room_operations/utils/: map_utils.py
clean_room_operations/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
clean_room_operations/install/clean_room_operations/share/clean_room_operations/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
clean_room_operations/log/: latest_build
clean_room_server/: package.xml  setup.cfg  setup.py
clean_room_server/clean_room_server/: clean_room_server.py  initial_pose_publisher.py
clean_room_server/clean_room_server/planner/: cleaning_manager.py
clean_room_server/clean_room_server/planner/planning/: room_cleaning_path_planner.py
clean_room_server/clean_room_server/utils/: map_utils.py
clean_room_server/config/: nav2_params.yaml  rooms.yaml
clean_room_server/launch/: clean_room_server.launch.py
clean_room_server/maps/: house_map.pgm  map_v3.pgm
cleaner_bringup/: package.xml  setup.cfg  setup.py
cleaner_bringup/cleaner_bringup/: initial_pose_publisher.py
cleaner_bringup/config/: nav2_params.yaml  nav2_params_default.yaml  nav2_params_tuned.yaml  navigate_to_pose.xml  rviz_params.rviz
cleaner_bringup/launch/: cleaner_eval.launch.py  cleaner_sim.launch.py  navigation.launch.py
cleaner_interfaces/: CMakeLists.txt  package.xml
cleaner_interfaces/action/: CleanRoom.action  GoToRoom.action
cleaner_interfaces/srv/: CleanRoom.srv
evaluator_core/: CMakeLists.txt  package.xml
evaluator_interfaces/: CMakeLists.txt  package.xml
evaluator_interfaces/srv/: StartCleaning.srv
go_to_room/: README.md  package.xml  setup.cfg  setup.py
go_to_room/config/: map.pgm  map.yaml  rooms.yaml
go_to_room/go_to_room/: go_to_room_client.py  go_to_room_node.py
(+5 files in other folders)
