<?xml version="1.0"?>
<package format="3">
  <name>clean_room</name>
  <version>0.1.0</version>
  <description>This package contains a heuristic path planner for robotic vacuums. For use in a pre-mapped environment.</description>

  <maintainer email="aidencorke@cmail.carleton.ca">Aiden Corke</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Service generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>clean_room_interfaces</depend>

  <!-- Core ROS2 dependencies -->
  <exec_depend>clean_room.launch</exec_depend>
  <exec_depend>turtlebot3_cleaning_sim.launch</exec_depend>  

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Nav2 dependencies -->
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_bringup</depend>

  <!-- TurtleBot3 simulation dependencies -->
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
                                     
