<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clean_room_client</name>
  <version>0.0.0</version>
  <description>Action server for room cleaning for a robot vacuum cleaner using the Turtlebot3 waffle platform.</description>
  <maintainer email="aidencorke@cmail.carleton.ca">AidenCorke</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>clean_room_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
